--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,11 @@
             <a href="contact.html"><button>Contact Me</button></a>
           </div>
           <div class="hero__avatar anim-a">
-            <img src="/src/assets/Squares.png" class="square-patterns" />
-            <img src="/src/assets/Me.jpg" class="profile" />
+            <img
+              src="/My-portfolio/src/assets/Squares.png"
+              class="square-patterns"
+            />
+            <img src="/My-portfolio/src/assets/Me.jpg" class="profile" />
           </div>
           <div class="hero__cta-wrapper anim-b">
             <span id="cta-span">SCROLL DOWN&nbsp;</span>
@@ -72,7 +75,7 @@
           <div class="works-section-mobile__work-1 work-1">
             <div class="works-section-mobile__works-image">
               <a href="https://github.com/mrklouie/PokeAPI" target="_blank"
-                ><img src="/src/assets/PokeAPI.jpg" alt=""
+                ><img src="/My-portfolio/src/assets/PokeAPI.jpg" alt=""
               /></a>
             </div>
             <div class="works-section-mobile__works-texts">
@@ -90,7 +93,9 @@
               <a
                 href="https://github.com/mrklouie/Electrical-Bulletin-Board-System.git"
                 target="_blank"
-                ><img src="/src/assets/Capstone Thumbnail.jpg" alt=""
+                ><img
+                  src="/My-portfolio/src/assets/Capstone Thumbnail.jpg"
+                  alt=""
               /></a>
             </div>
             <div class="works-section-mobile__works-texts">
@@ -116,7 +121,7 @@
               <a
                 href="https://github.com/mrklouie/Netflix-Clone"
                 target="_blank"
-                ><img src="/src/assets/Netflix.jpg" alt=""
+                ><img src="/My-portfolio/src/assets/Netflix.jpg" alt=""
               /></a>
             </div>
             <div class="works-section-mobile__works-texts">
@@ -144,7 +149,7 @@
           </div>
           <div class="right">
             <a href="https://github.com/mrklouie/PokeAPI" target="_blank"
-              ><img src="/src/assets/PokeAPI.jpg" alt=""
+              ><img src="/My-portfolio/src/assets/PokeAPI.jpg" alt=""
             /></a>
           </div>
         </div>
@@ -167,7 +172,9 @@
           </div>
           <div class="right">
             <a href="https://github.com/mrklouie/PokeAPI" target="_blank"
-              ><img src="/src/assets/Capstone Thumbnail.jpg" alt=""
+              ><img
+                src="/My-portfolio/src/assets/Capstone Thumbnail.jpg"
+                alt=""
             /></a>
           </div>
         </div>
@@ -183,7 +190,7 @@
           </div>
           <div class="right">
             <a href="https://github.com/mrklouie/Netflix-Clone" target="_blank"
-              ><img src="/src/assets/Netflix.jpg" alt=""
+              ><img src="/My-portfolio/src/assets/Netflix.jpg" alt=""
             /></a>
           </div>
         </div>
@@ -194,12 +201,18 @@
           <div class="about-me-section__contents">
             <div class="about-me-section__left-avatar">
               <div class="image-wrapper anim-d">
-                <img src="/src/assets/Squares.png" class="squares" />
                 <img
-                  src="/src/assets/About me circle.png"
+                  src="/My-portfolio/src/assets/Squares.png"
+                  class="squares"
+                />
+                <img
+                  src="/My-portfolio/src/assets/About me circle.png"
                   class="about-me-circle"
                 />
-                <img src="/src/assets/Me2.jpg" class="avatar-image" />
+                <img
+                  src="/My-portfolio/src/assets/Me2.jpg"
+                  class="avatar-image"
+                />
               </div>
             </div>
             <div class="about-me-section__right-texts">
@@ -223,43 +236,43 @@
         <section class="skills-section">
           <div class="skills-section__grid-container">
             <div class="skill-1 skill anim-f">
-              <img src="/src/assets/html.svg" alt="" />
+              <img src="/My-portfolio/src/assets/html.svg" alt="" />
               <div class="detail"><span>HTML</span></div>
             </div>
             <div class="skill-2 skill anim-f">
-              <img src="/src/assets/css.svg" />
+              <img src="/My-portfolio/src/assets/css.svg" />
               <div class="detail"><span>CSS</span></div>
             </div>
             <div class="skill-3 skill anim-f">
-              <img src="/src/assets/javascript.svg" alt="" />
+              <img src="/My-portfolio/src/assets/javascript.svg" alt="" />
               <div class="detail"><span>Javascript</span></div>
             </div>
             <div class="skill-4 skill anim-f">
-              <img src="/src/assets/php.svg" alt="" />
+              <img src="/My-portfolio/src/assets/php.svg" alt="" />
               <div class="detail"><span>PHP</span></div>
             </div>
             <div class="skill-5 skill anim-f">
-              <img src="/src/assets/mysql.svg" alt="" />
+              <img src="/My-portfolio/src/assets/mysql.svg" alt="" />
               <div class="detail"><span>MySQL</span></div>
             </div>
             <div class="skill-6 skill anim-f">
-              <img src="/src/assets/sass.svg" alt="" />
+              <img src="/My-portfolio/src/assets/sass.svg" alt="" />
               <div class="detail"><span>Sass</span></div>
             </div>
             <div class="skill-7 skill anim-f">
-              <img src="/src/assets/github.svg" alt="" />
+              <img src="/My-portfolio/src/assets/github.svg" alt="" />
               <div class="detail"><span>GitHub</span></div>
             </div>
             <div class="skill-8 skill anim-f">
-              <img src="/src/assets/illustrator.svg" alt="" />
+              <img src="/My-portfolio/src/assets/illustrator.svg" alt="" />
               <div class="detail"><span>Illustrator</span></div>
             </div>
             <div class="skill-9 skill anim-f">
-              <img src="/src/assets/putoshop.svg" alt="" />
+              <img src="/My-portfolio/src/assets/putoshop.svg" alt="" />
               <div class="detail"><span>Photoshop</span></div>
             </div>
             <div class="skill-10 skill anim-f">
-              <img src="/src/assets/figma.svg" alt="" />
+              <img src="/My-portfolio/src/assets/figma.svg" alt="" />
               <div class="detail"><span>Figma</span></div>
             </div>
           </div>
