--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,9 @@
             </div>
           </div>
           <div class="right">
-            <a href="https://github.com/mrklouie/PokeAPI" target="_blank"
+            <a
+              href="https://github.com/mrklouie/Electrical-Bulletin-Board-System.git"
+              target="_blank"
               ><img src="/assets/Capstone Thumbnail.jpg" alt=""
             /></a>
           </div>
